k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noorpay-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.noorpay.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: noorpay-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noorpay-frontend
                port:
                  number: 80
